--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "electron:build": "electron-builder"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
