--- a/package.json
+++ b/package.json
@@ -1,14 +1,39 @@
 {
   "name": "iwindows",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "description": "Desktop camera app",
+  "author": "Setsuwww",
   "main": "electron/main.js",
   "scripts": {
     "dev": "concurrently \"vite\" \"wait-on http://localhost:5173 && set VITE_DEV_SERVER_URL=http://localhost:5173&& electron .\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "electron:build": "electron-builder"
+    "electron:build": "electron-builder --win"
+  },
+  "build": {
+    "appId": "com.iwindows.app",
+    "productName": "iWindows",
+    "directories": {
+      "output": "dist",
+      "buildResources": "assets"
+    },
+    "files": [
+      "dist/**",
+      "electron/**"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "electron/icon.ico"
+    },
+    "nsis": {
+      "oneClick": true,
+      "allowElevation": true,
+      "perMachine": false,
+      "runAfterFinish": true,
+      "deleteAppDataOnUninstall": true
+    }
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
